--- a/templ/login.html
+++ b/templ/login.html
@@ -1,100 +1,17 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>nevikw39_0725{}
-        果然還是被你找到最後一關呢 &gt;&lt;
+<!doctype html><html lang="en"><head><meta charset="utf-8">
+    <title>nevikw39_0725{} 果然還是被你找到最後一關呢 &gt;&lt;
         大家都想要這個網站的密碼ㄅ。先別管這個了，你聽過「費氏數列」嗎？？就是：
-        F_0 = 0
-        F_1 = 1
-        F_n = F_{n-1} + F_{n-2}
+            F_0 = 0 F_1 = 1 F_n = F_{n-1} + F_{n-2}
         另外，我們有 S(x) 如下：
-        S(5269) = 5 + 2 + 6 + 9 = 22
-        S(9487) = 9 + 4 + 8 + 7 = 28
-        S(198964) = 1 + 9 + 8 + 9 + 6 + 4 = 37
-        現在，最後一個提示：「S(F_{111}) = '?'」。
-        加油！！
-    </title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="佰拾壹中部電資聯合幹部見面：ＲＰＧ仿ＣＴＦ解謎" />
-    <meta name="keywords" content="佰拾壹 百十一 中部電資 聯合幹部見面 幹見 RPG CTF 解謎" />
-    <meta name="author" content="nevikw39">
-    <link rel="stylesheet" href="https://www.kevinweng.tk/ab/bootstrap.min.css" media="screen" id="stylesheet">
-    <link rel="stylesheet" href="https://www.kevinweng.tk/ab/anti-bold.css" media="screen" id="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="static/favicon.ico" />
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
+            S(5269) = 5 + 2 + 6 + 9 = 22
+            S(9487) = 9 + 4 + 8 + 7 = 28
+            S(198964) = 1 + 9 + 8 + 9 + 6 + 4 = 37
+        現在，最後一個提示：「S(F_{111}) = '?'」。 加油！！
+    </title><meta content="width=device-width,initial-scale=1" name="viewport"><meta content="IE=edge" http-equiv="X-UA-Compatible"><meta content="佰拾壹中部電資聯合幹部見面：ＲＰＧ仿ＣＴＦ解謎" name="description"><meta content="佰拾壹 百十一 中部電資 聯合幹部見面 幹見 RPG CTF 解謎" name="keywords"><meta content="nevikw39" name="author"><link href="https://www.kevinweng.tk/ab/bootstrap.min.css" rel="stylesheet" id="stylesheet" media="screen"><link href="https://www.kevinweng.tk/ab/anti-bold.css" rel="stylesheet" id="stylesheet" media="screen"><link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><link href="static/favicon.ico" rel="icon" type="image/png"><!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
         type="text/javascript"></script>
     <script type="text/javascript">
                 window.dataLayer = window.dataLayer || [];
                 function gtag() { dataLayer.push(arguments); }
                 gtag('js', new Date());
                 gtag('config', 'UA-144209773-1');
-    </script> -->
-</head>
-
-<body class="text-center">
-    <form class="mx-auto pt-5 mb-5 col-md-4" id="form" method="post">
-        <img class="mb-4 rounded-circle" src="static/favicon.ico" id="img" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal" id="title">請輸入咒語以解鎖</h1>
-        <label for="inputPassword" class="sr-only">咒語</label>
-        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-        <input type="password" id="inputPassword" class="form-control" placeholder="咒語" required name="pwd" autofocus>
-        <div class="invalid-feedback">密碼錯誤！！ＱＱ</div>
-        <button class="my-3 btn btn-lg btn-success btn-block" id="btnPassword" type="submit">芝麻開門～～</button>
-    </form>
-    <span class="badge badge-info" id="time" style="width: 50px !important;"></span>
-    <div class="mx-auto my-5 col-md-4 card bg-dark border-light text-dark">
-        <div class="card-header bg-dark border-light">nevikw39_0725{}</div>
-        <div class="card-body">
-            <h5 class="card-title">歡迎各位進入第二關！！</h5>
-            <p class="card-text">
-                我不太熟悉架前端網頁，每次都要下一大堆註解ＱＱ<br>
-                不過這樣也好，有時候我都會把密碼的提示隱藏在原始碼裡，這樣就不會忘記了！！
-            </p>
-        </div>
-    </div>
-    <div class="modal fade" id="modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header alert-warning">
-                    <h5 class="modal-title">啊喔 o'_'o</h5>
-                    <button type="button" class="close" data-dismiss="modal">
-                        <span>&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body bg-warning text-dark">啊哈哈，這還不是正確答案喔！！然而方向是正確喔 o'_'o 就差那麼臨門一腳惹！！想想看，這個數字似乎可以代表？？
-                </div>
-                <div class="modal-footer bg-warning">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="mt-5">
-        <div class="col-lg-12 p-4">
-            <div class="container text-center">
-                <ul class="list-inline">
-                    <li class="d-inline-block p-1 list-inline-item"><a href="https://github.com/nevikw39/"
-                            class="fa fa-github"></a></li>
-                    <li class="d-inline-block p-1 list-inline-item"><a href="https://t.me/nevikw39/"
-                            class="fa fa-telegram"></a></li>
-                    <li class="d-inline-block p-1 list-inline-item"><a href="https://www.instagram.com/nevikw39/"
-                            class="fa fa-instagram"></a></li>
-                </ul>
-                <p class="display-5">&copy;2020 @nevikw39 ⽜⺙</p>
-            </div>
-        </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script>
-    <script defer src="static/login.js" type="text/javascript"></script>
-</body>
-
-</html>
+    </script> --></head><body class="text-center"><form class="col-md-4 mx-auto mb-5 pt-5" id="form" method="post"><img class="mb-4 rounded-circle" height="72" id="img" src="static/favicon.ico" width="72"><h1 class="font-weight-normal h3 mb-3" id="title">請輸入咒語以解鎖</h1><label class="sr-only" for="inputPassword">咒語</label> <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span> <input autofocus class="form-control" id="inputPassword" name="pwd" placeholder="咒語" required type="password"><div class="invalid-feedback">密碼錯誤！！ＱＱ</div><button class="btn btn-block btn-lg btn-success my-3" type="submit" id="btnPassword">芝麻開門～～</button></form><span class="badge badge-info" id="time" style="width:50px!important"></span><div class="bg-dark border-light card col-md-4 mx-auto my-5 text-dark"><div class="bg-dark border-light card-header">nevikw39_0725{}</div><div class="card-body"><h5 class="card-title text-primary">歡迎各位進入第二關！！</h5><p class="card-text">我不太熟悉架前端網頁，每次都要下一大堆註解ＱＱ<br>不過這樣也好，有時候我都會把密碼的提示隱藏在原始碼裡，這樣就不會忘記了！！</p></div></div><div class="fade modal" role="dialog" id="modal" tabindex="-1"><div class="modal-dialog" role="document"><div class="modal-content"><div class="alert-warning modal-header"><h5 class="modal-title">啊喔 o'_'o</h5><button class="close" type="button" data-dismiss="modal"><span>&times;</span></button></div><div class="bg-warning modal-body text-dark">啊哈哈，這還不是正確答案喔！！然而方向是正確喔 o'_'o 就差那麼臨門一腳惹！！想想看，這個數字似乎可以代表？？</div><div class="bg-warning modal-footer"><button class="btn btn-danger" type="button" data-dismiss="modal">Close</button></div></div></div></div><footer class="mt-5"><div class="col-lg-12 p-4"><div class="text-center container"><ul class="list-inline"><li class="d-inline-block list-inline-item p-1"><a class="fa fa-github" href="https://github.com/nevikw39/"></a></li><li class="d-inline-block list-inline-item p-1"><a class="fa fa-telegram" href="https://t.me/nevikw39/"></a></li><li class="d-inline-block list-inline-item p-1"><a class="fa fa-instagram" href="https://www.instagram.com/nevikw39/"></a></li></ul><p class="display-5">&copy;2020 @nevikw39 ⽜⺙</p></div></div></footer><script src="https://code.jquery.com/jquery-3.2.1.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script><script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script><script src="static/login.js" defer></script></body></html>
