--- a/templ/success.html
+++ b/templ/success.html
@@ -1,209 +1,8 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>佰拾壹中部電資聯合幹部見面：ＲＰＧ解謎</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="佰拾壹中部電資聯合幹部見面：ＲＰＧ仿ＣＴＦ解謎" />
-    <meta name="keywords" content="佰拾壹 百十一 中部電資 聯合幹部見面 幹見 RPG CTF 解謎" />
-    <meta name="author" content="nevikw39">
-    <link rel="stylesheet" href="https://www.kevinweng.tk/ab/bootstrap.min.css" media="screen" id="stylesheet">
-    <link rel="stylesheet" href="https://www.kevinweng.tk/ab/anti-bold.css" media="screen" id="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="static/favicon.ico" />
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>佰拾壹中部電資聯合幹部見面：ＲＰＧ解謎</title><meta content="width=device-width,initial-scale=1" name="viewport"><meta content="IE=edge" http-equiv="X-UA-Compatible"><meta content="佰拾壹中部電資聯合幹部見面：ＲＰＧ仿ＣＴＦ解謎" name="description"><meta content="佰拾壹 百十一 中部電資 聯合幹部見面 幹見 RPG CTF 解謎" name="keywords"><meta content="nevikw39" name="author"><link href="https://www.kevinweng.tk/ab/bootstrap.min.css" rel="stylesheet" id="stylesheet" media="screen"><link href="https://www.kevinweng.tk/ab/anti-bold.css" rel="stylesheet" id="stylesheet" media="screen"><link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><link href="static/favicon.ico" rel="icon" type="image/png"><!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
         type="text/javascript"></script>
     <script type="text/javascript">
                 window.dataLayer = window.dataLayer || [];
                 function gtag() { dataLayer.push(arguments); }
                 gtag('js', new Date());
                 gtag('config', 'UA-144209773-1');
-    </script> -->
-</head>
-
-<body class="text-center">
-    <div class="d-block">
-        <div class="container">
-            <canvas id="canvas" class="w-100 h-100"></canvas>
-        </div>
-        <div id="trigger0" style="min-height: 1em;"></div>
-        <div class="toast bg-secondary text-light mx-auto" role="alert" data-animation="true" data-delay="5000">
-            <div class="toast-body">
-                點擊可以觸發更多煙火。往下滑動以查看更多。
-            </div>
-        </div>
-        <h1 id="cong">Congratulation!!</h1>
-        <div class="w-100 h-100 overflow-hidden" id="pin">
-            <section class="w-100 h-100 mb-5 position-absolute bg-info d-flex flex-column align-items-center">
-                <table
-                    class="table table-striped table-hover bg-gradient-info text-dark position-relative col-lg-6 mx-auto my-auto">
-                    <tbody>
-                        <tr>
-                            <th scope="row">姓名</th>
-                            <td>萬人迷
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">性別</th>
-                            <td>男
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">身高</th>
-                            <td>182cm
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">體重</th>
-                            <td>70kg
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">生日</th>
-                            <td>7/25
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">星座</th>
-                            <td>獅子座
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">年紀</th>
-                            <td>27歲
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">職業</th>
-                            <td>軟體工程師
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">月收入</th>
-                            <td>8萬
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">興趣</th>
-                            <td>寫程式、遊戲、摸索電子產品
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">擅長的運動</th>
-                            <td>籃球
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <footer class="blockquote-footer text-dark mx-auto my-auto" style="font-size: 1.64062rem!important">By <cite>妮妮</cite></footer>
-            </section>
-            <section class="w-100 h-100 mb-5 position-absolute bg-success d-flex align-items-center">
-                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
-                    <p class="mb-0">
-                        祝福各位上幹快樂、社運昌隆！！
-                    </p>
-                    <!-- <footer class="blockquote-footer text-dark">By <cite></cite></footer> -->
-                </blockquote>
-            </section>
-            <section class="w-100 h-100 mb-5 position-absolute bg-warning d-flex align-items-center">
-                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-dark">
-                    <p class="mb-0">
-                        學弟學妹嗨嗨😇<br>
-                        偶是這次活動ㄉ工作人員啦，相信各位小朋友在這次ㄉ活動都認識惹不少友社ㄉ小夥伴，在未來ㄉ一年尼們可能會一起辦活動、喬事情、共患難、獨享福，抑或出現爭執或摩擦☹️，但是最終尼們會學到經驗、甚至獲得知心好友，並感受那股屬於電資研人的熱血與驕傲，祝福尼們也能夠從中學習、銳變、成長！
-                    </p>
-                    <!-- <footer class="blockquote-footer text-secondary">By <cite></cite></footer> -->
-                </blockquote>
-            </section>
-            <section class="w-100 h-100 mb-5 position-absolute bg-danger d-flex align-items-center">
-                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
-                    <p class="mb-0">
-                        嗨百土的學弟妹們！<br>
-                        身為幹部的你們，<br>
-                        將要面臨種種危機💪<br>
-                        這邊給你們一個小小建議！<br>
-                        那就是--<br>
-                        有問題主動找學長姐求救吧！<br>
-                        像我真的很想要知道你們有沒有問題，進展怎們樣之類的<br>
-                        拍謝啦，我就是一個很愛擔心的老人(´ . .̫ . `)<br>
-                        所以儘管問吧！<br>
-                        學長姐都會好好的告訴你們的！<br>
-                        有前人的經歷，<br>
-                        一定可以給你們滿滿的避雷點（？<br>
-                        以後電資就拜託你們了！<br>
-                        嘎油窩(･ω･)つ⊂(･ω･)
-                    </p>
-                    <!-- <footer class="blockquote-footer text-dark">By <cite>漢堡</cite></footer> -->
-                </blockquote>
-            </section>
-        </div>
-    </div>
-    <div id="trigger1"></div>
-    <div class="card-columns mx-auto">
-        <div class="card bg-secondary text-dark mx-auto">
-            <div class="card-header text-light">nevikw39_0725{}</div>
-            <div class="card-body">
-                <h5 class="card-title">後記</h5>
-                <p class="card-text">
-                    這次幹見中，我臨危受命，必須在一週內發想出一組謎題。這項任務說難不難，說易卻也不易。畢竟出得太簡單有辱一中電研，太艱深又失去意義。在資訊領域中，CTF
-                    是很知名的解謎遊戲。因此，我們決定仿造該種形式並簡化以符合需要。
-                </p>
-            </div>
-        </div>
-        <div class="card bg-primary mx-auto">
-            <div class="card-header text-light">nevikw39_0725{}</div>
-            <div class="card-body">
-                <h5 class="card-title">心得</h5>
-                <p class="card-text">
-                    為惹要有逼真的體驗，我著手開發網頁專案。後端伺服器的部分，我嘗試使用比較陌生的
-                    Go，享受它作為一個現代的高階語言的簡潔美學，一方面也是看上他高效的編譯在我爛爛伺服器上應該比
-                    Python 順。後端的部分確實比較繁瑣，我也藉機好好練習，特別大量地運用許多動畫特效。
-                </p>
-            </div>
-        </div>
-        <div class="card bg-light text-dark mx-auto">
-            <div class="card-header bg-white">nevikw39_0725{}</div>
-            <div class="card-body">
-                <h5 class="card-title">感謝</h5>
-                <p class="card-text">
-                    首先感謝廷翰總是即時的踩下煞車（？還有辛苦地念誠給我不少建議。另外，立宜跟慣性缺席的鈺維大方無私的分享他們猜密碼的策略，增加我對這個太漂亮又簡單的謎底不被輕易猜中的信心。
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="container" id="divEnd">
-        <h1 id="end"><span class="word">THE</span><span class="word"> </span><span class="word">END</span><span
-                class="word">.</span></h1>
-    </div>
-    <footer>
-        <div class="col-lg-12 p-4">
-            <div class="container text-center">
-                <ul class="list-inline">
-                    <li class="d-inline-block p-1 list-inline-item"><a href="https://github.com/nevikw39/"
-                            class="fa fa-github"></a></li>
-                    <li class="d-inline-block p-1 list-inline-item"><a href="https://t.me/nevikw39/"
-                            class="fa fa-telegram"></a></li>
-                    <li class="d-inline-block p-1 list-inline-item"><a href="https://www.instagram.com/nevikw39/"
-                            class="fa fa-instagram"></a></li>
-                </ul>
-                <p class="display-5">&copy;2020 @nevikw39 ⽜⺙</p>
-            </div>
-        </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.velocity.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/jquery.ScrollMagic.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script>
-    <script defer src="static/success.js" type="text/javascript"></script>
-</body>
-
-</html>
+    </script> --></head><body class="text-center"><div class="d-block"><div class="container"><canvas class="h-100 w-100" id="canvas"></canvas></div><div id="trigger0" style="min-height:1em"></div><div class="mx-auto text-light bg-secondary toast" data-animation="true" data-delay="5000" role="alert"><div class="toast-body">點擊可以觸發更多煙火。往下滑動以查看更多。</div></div><h1 id="cong">Congratulation!!</h1><div class="h-100 w-100 overflow-hidden" id="pin"><section class="h-100 w-100 align-items-center d-flex mb-5 position-absolute bg-info flex-column"><table class="mx-auto my-auto position-relative text-dark bg-gradient-info col-lg-6 table table-hover table-striped"><tbody><tr><th scope="row">姓名</th><td>萬人迷</td></tr><tr><th scope="row">性別</th><td>男</td></tr><tr><th scope="row">身高</th><td>182cm</td></tr><tr><th scope="row">體重</th><td>70kg</td></tr><tr><th scope="row">生日</th><td>7/25</td></tr><tr><th scope="row">星座</th><td>獅子座</td></tr><tr><th scope="row">年紀</th><td>27歲</td></tr><tr><th scope="row">職業</th><td>軟體工程師</td></tr><tr><th scope="row">月收入</th><td>8萬</td></tr><tr><th scope="row">興趣</th><td>寫程式、遊戲、摸索電子產品</td></tr><tr><th scope="row">擅長的運動</th><td>籃球</td></tr></tbody></table><footer class="mx-auto my-auto text-dark blockquote-footer" style="font-size:1.64062rem!important">By <cite>妮妮</cite></footer></section><section class="h-100 w-100 align-items-center d-flex mb-5 position-absolute bg-success"><blockquote class="mx-auto my-auto position-relative blockquote w-75 text-light"><p class="mb-0">祝福各位上幹快樂、社運昌隆！！</p><!-- <footer class="blockquote-footer text-dark">By <cite></cite></footer> --></blockquote></section><section class="h-100 w-100 align-items-center d-flex mb-5 position-absolute bg-warning"><blockquote class="mx-auto my-auto position-relative blockquote w-75 text-dark"><p class="mb-0">學弟學妹嗨嗨😇<br>偶是這次活動ㄉ工作人員啦，相信各位小朋友在這次ㄉ活動都認識惹不少友社ㄉ小夥伴，在未來ㄉ一年尼們可能會一起辦活動、喬事情、共患難、獨享福，抑或出現爭執或摩擦☹️，但是最終尼們會學到經驗、甚至獲得知心好友，並感受那股屬於電資研人的熱血與驕傲，祝福尼們也能夠從中學習、銳變、成長！</p><!-- <footer class="blockquote-footer text-secondary">By <cite></cite></footer> --></blockquote></section><section class="h-100 w-100 align-items-center d-flex mb-5 position-absolute bg-danger"><blockquote class="mx-auto my-auto position-relative blockquote w-75 text-light"><p class="mb-0">嗨百土的學弟妹們！<br>身為幹部的你們，<br>將要面臨種種危機💪<br>這邊給你們一個小小建議！<br>那就是--<br>有問題主動找學長姐求救吧！<br>像我真的很想要知道你們有沒有問題，進展怎們樣之類的<br>拍謝啦，我就是一個很愛擔心的老人(´ . .̫ . `)<br>所以儘管問吧！<br>學長姐都會好好的告訴你們的！<br>有前人的經歷，<br>一定可以給你們滿滿的避雷點（？<br>以後電資就拜託你們了！<br>嘎油窩(･ω･)つ⊂(･ω･)</p><!-- <footer class="blockquote-footer text-dark">By <cite>漢堡</cite></footer> --></blockquote></section></div></div><div id="trigger1"></div><div class="mx-auto card-columns"><div class="mx-auto text-dark card bg-secondary"><div class="text-light card-header">nevikw39_0725{}</div><div class="card-body"><h5 class="card-title">後記</h5><p class="card-text">這次幹見中，我臨危受命，必須在一週內發想出一組謎題。這項任務說難不難，說易卻也不易。畢竟出得太簡單有辱一中電研，太艱深又失去意義。在資訊領域中，CTF 是很知名的解謎遊戲。因此，我們決定仿造該種形式並簡化以符合需要。</p></div></div><div class="mx-auto card bg-primary"><div class="text-light card-header">nevikw39_0725{}</div><div class="card-body"><h5 class="card-title">心得</h5><p class="card-text">為惹要有逼真的體驗，我著手開發網頁專案。後端伺服器的部分，我嘗試使用比較陌生的 Go，享受它作為一個現代的高階語言的簡潔美學，一方面也是看上他高效的編譯在我爛爛伺服器上應該比 Python 順。後端的部分確實比較繁瑣，我也藉機好好練習，特別大量地運用許多動畫特效。</p></div></div><div class="mx-auto text-dark card bg-light"><div class="card-header bg-white">nevikw39_0725{}</div><div class="card-body"><h5 class="card-title">感謝</h5><p class="card-text">首先感謝廷翰總是即時的踩下煞車（？還有辛苦地念誠給我不少建議。另外，立宜跟慣性缺席的鈺維大方無私的分享他們猜密碼的策略，增加我對這個太漂亮又簡單的謎底不被輕易猜中的信心。</p></div></div></div><div class="container" id="divEnd"><h1 id="end"><span class="word">THE</span><span class="word"> </span><span class="word">END</span><span class="word">.</span></h1></div><footer><div class="col-lg-12 p-4"><div class="container text-center"><ul class="list-inline"><li class="d-inline-block list-inline-item p-1"><a class="fa fa-github" href="https://github.com/nevikw39/"></a></li><li class="d-inline-block list-inline-item p-1"><a class="fa fa-telegram" href="https://t.me/nevikw39/"></a></li><li class="d-inline-block list-inline-item p-1"><a class="fa fa-instagram" href="https://www.instagram.com/nevikw39/"></a></li></ul><p class="display-5">&copy;2020 @nevikw39 ⽜⺙</p></div></div></footer><script src="https://code.jquery.com/jquery-3.2.1.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.velocity.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/jquery.ScrollMagic.min.js"></script><script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script><script src="static/success.js" defer></script></body></html>
